Update crossfilter sample data.
Fixes vega/vega-editor#34. It looks like old crossfilter data was copied
over when the vega-datasets repository was created. Added a script (`npm
run flights N`) to re-sample data as needed.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vega-datasets",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Common repository for example datasets used by Vega related projects.",
   "repository": {
     "type": "git",
@@ -9,5 +9,11 @@
   "author": {
     "name": "UW Interactive Data Lab",
     "url": "http://idl.cs.washington.edu"
+  },
+  "devDependencies": {
+    "datalib": "^1.5.9"
+  },
+  "scripts": {
+    "flights": "node ./scripts/flights.js"
   }
 }
