--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vega-datasets",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "Common repository for example datasets used by Vega related projects.",
   "repository": {
     "type": "git",
@@ -14,6 +14,7 @@
     "datalib": "^1.5.9"
   },
   "scripts": {
-    "flights": "node ./scripts/flights.js"
+    "flights": "node scripts/flights.js",
+    "github": "python scripts/github.py"
   }
 }
