--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "url": "http://idl.cs.washington.edu"
   },
   "devDependencies": {
+    "@types/d3-dsv": "^1.0.35",
+    "d3-dsv": "^1.1.1",
     "datalib": "^1.9.2",
     "rollup": "^1.1.2",
+    "rollup-plugin-node-resolve": "^4.0.0",
     "terser": "^3.16.1",
     "typescript": "^3.3.3"
   },
