--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   },
   "devDependencies": {
     "@types/d3-dsv": "^1.0.36",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "d3-dsv": "^1.2.0",
     "datalib": "^1.9.2",
-    "rollup": "^1.29.1",
-    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup": "^1.31.1",
     "terser": "^4.6.3",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.2"
   },
   "scripts": {
     "index": "./scripts/make-url-index.sh > src/urls.ts",
