--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "vega-datasets",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Common repository for example datasets used by Vega related projects.",
+  "license": "BSD-3-Clause",
   "main": "build/vega-datasets",
   "module": "build/src/data",
   "unpkg": "build/vega-datasets.min.js",
@@ -18,12 +19,12 @@
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "@types/d3-dsv": "^1.0.36",
-    "d3-dsv": "^1.2.0",
-    "datalib": "^1.9.2",
-    "rollup": "^2.16.1",
-    "terser": "^5.0.0",
-    "typescript": "^4.0.2"
+    "@types/d3-dsv": "^1.1.0",
+    "d3-dsv": "^2.0.0",
+    "datalib": "^1.9.3",
+    "rollup": "^2.28.2",
+    "terser": "^5.3.3",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "index": "./scripts/make-url-index.sh > src/urls.ts",
