--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "url": "http://idl.cs.washington.edu"
   },
   "devDependencies": {
+    "@auto-it/conventional-commits": "^10.32.0",
+    "@auto-it/first-time-contributor": "^10.32.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@types/d3-dsv": "^2.0.0",
+    "auto": "^10.32.0",
     "d3-dsv": "^2.0.0",
     "datalib": "^1.9.3",
     "rollup": "^2.28.2",
