--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,12 @@
 name: Test
 
-on: [push]
+on:
+  push:
+    branches:
+      - next
+  pull_request:
+    branches:
+      - next
 
 jobs:
   test:
