chore: refactor builds and include sourcemaps and ts support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "es2015",
     "moduleResolution": "node",
     "declaration": true,
+    "declarationMap": true,
     "strict": true,
     "outDir": "./build",
     "inlineSourceMap": true,
