--- a/package.json
+++ b/package.json
@@ -16,24 +16,33 @@
     "name": "UW Interactive Data Lab",
     "url": "http://idl.cs.washington.edu"
   },
+  "files": [
+    "src",
+    "build"
+  ],
   "devDependencies": {
-    "@auto-it/conventional-commits": "^10.37.4",
-    "@auto-it/first-time-contributor": "^10.37.4",
+    "@auto-it/conventional-commits": "^10.37.6",
+    "@auto-it/first-time-contributor": "^10.37.6",
+    "@babel/core": "^7.19.3",
+    "@babel/plugin-transform-runtime": "^7.19.1",
+    "@babel/preset-env": "^7.19.3",
+    "@babel/preset-typescript": "^7.18.6",
+    "@babel/runtime": "^7.19.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
     "@types/d3-dsv": "^3.0.0",
-    "auto": "^10.37.4",
+    "auto": "^10.37.6",
     "d3-dsv": "^3.0.1",
     "datalib": "^1.9.3",
-    "rollup": "^2.77.3",
-    "terser": "^5.14.2",
-    "typescript": "^4.7.4"
+    "rollup": "^2.79.1",
+    "rollup-plugin-bundle-size": "^1.0.3",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-ts": "^3.0.2",
+    "terser": "^5.15.0",
+    "typescript": "^4.8.4"
   },
   "scripts": {
-    "index": "./scripts/make-url-index.sh > src/urls.ts",
-    "prebuild": "npm run index && tsc",
+    "prebuild": "./scripts/make-url-index.sh > src/urls.ts",
     "build": "rollup -c",
-    "postbuild": "terser build/vega-datasets.js -cm > build/vega-datasets.min.js",
     "flights": "node scripts/flights.js",
     "github": "python scripts/github.py",
     "release": "auto shipit"
