--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vega-datasets",
-  "version": "2.3.1",
+  "version": "2.5.3",
   "description": "Common repository for example datasets used by Vega related projects.",
   "license": "BSD-3-Clause",
   "main": "build/vega-datasets.js",
@@ -22,19 +22,18 @@
     "data"
   ],
   "devDependencies": {
-    "@auto-it/conventional-commits": "^10.37.6",
-    "@auto-it/first-time-contributor": "^10.37.6",
     "@babel/core": "^7.19.3",
     "@babel/plugin-transform-runtime": "^7.19.1",
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/runtime": "^7.19.0",
+    "@release-it/conventional-changelog": "^5.1.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/d3-dsv": "^3.0.0",
-    "auto": "^10.37.6",
     "d3-dsv": "^3.0.1",
     "datalib": "^1.9.3",
+    "release-it": "^15.6.0",
     "rollup": "^2.79.1",
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-terser": "^7.0.2",
@@ -47,6 +46,6 @@
     "build": "rollup -c",
     "flights": "node scripts/flights.js",
     "github": "python scripts/github.py",
-    "release": "yarn build && auto shipit"
+    "release": "release-it"
   }
 }
