chore: switch to esm rollup, update deps, fix style of changelog

--- a/.release-it.json
+++ b/.release-it.json
@@ -9,6 +9,8 @@
     "after:bump": "yarn build"
   },
   "plugins": {
-    "@release-it/conventional-changelog": {}
+    "@release-it/conventional-changelog": {
+      "infile": "CHANGELOG.md"
+    }
   }
 }
