chore: set changelog preset

--- a/.release-it.json
+++ b/.release-it.json
@@ -10,6 +10,7 @@
   },
   "plugins": {
     "@release-it/conventional-changelog": {
+      "preset": "angular",
       "infile": "CHANGELOG.md"
     }
   }
