chore: update to supported terser plugin

--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "@release-it/conventional-changelog": "^5.1.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-terser": "^0.4.1",
     "@types/d3-dsv": "^3.0.1",
     "d3-dsv": "^3.0.1",
     "datalib": "^1.9.3",
     "release-it": "^15.10.1",
-    "rollup": "^3.20.6",
     "rollup-plugin-bundle-size": "^1.0.3",
-    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-ts": "^3.2.0",
+    "rollup": "^3.20.6",
     "terser": "^5.17.1",
     "typescript": "^5.0.4"
   },
