--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.25.4",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-typescript": "^7.24.7",
