--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,10 @@ jobs:
           cache: 'npm'
           node-version: 20
 
+      - uses: astral-sh/setup-uv@v3
+        with:
+          version: ">=0.5.0"
+
       - name: Install Node dependencies
         run: npm ci
 
