--- a/SOURCES.toml
+++ b/SOURCES.toml
@@ -18,8 +18,12 @@ path        = "anscombe.json"
 description = """Graphs in Statistical Analysis, F. J. Anscombe, The American Statistician."""
 
 [[resources]] # Path: barley.json
-path        = "barley.json"
-description = """The result of a 1930s agricultural experiment in Minnesota, this dataset contains yields for 10 different varieties of barley at six different sites. It was first published by agronomists F.R. Immer, H.K. Hayes, and L. Powers in the 1934 paper \"Statistical Determination of Barley Varietal Adaption.\" R.A. Fisher's popularized its use in the field of statistics when he included it in his book \"The Design of Experiments.\" Since then it has been used to demonstrate new statistical techniques, including the trellis charts developed by Richard Becker, William Cleveland and others in the 1990s."""
+path = "barley.json"
+description = """The result of a 1930s agricultural experiment in Minnesota, this dataset contains yields for 10 different varieties of barley at six different sites.
+It was first published by agronomists F.R. Immer, H.K. Hayes, and L. Powers in the 1934 paper \"Statistical Determination of Barley Varietal Adaption\".
+R.A. Fisher's popularized its use in the field of statistics when he included it in his book \"The Design of Experiments\".
+Since then it has been used to demonstrate new statistical techniques, including the trellis charts developed by Richard Becker, William Cleveland and others in the 1990s.
+"""
 
 [[resources.sources]]
 title = "The Design of Experiments Reference"
