restore URL to single line
Co-authored-by: Dan Redding <125183946+dangotbanned@users.noreply.github.com>

--- a/SOURCES.toml
+++ b/SOURCES.toml
@@ -662,8 +662,8 @@ FEC data is subject to the commission's:
 
 Additionally, the FEC's Github [repository](https://github.com/fecgov/FEC) states:
 > This project is in the public domain within the United States, and we waive worldwide 
-> copyright and related rights through [CC0 universal public domain](https://
-> creativecommons.org/publicdomain/zero/1.0/) dedication. Read more on our license page. 
+> copyright and related rights through [CC0 universal public domain](https://creativecommons.org/publicdomain/zero/1.0/)
+> dedication. Read more on our license page.
 > A few restrictions limit the way you can use FEC data. For example, you can't use 
 > contributor lists for commercial purposes or to solicit donations. Learn more on 
 > [FEC.gov](https://www.fec.gov/)."""
