--- a/_data/datapackage_additions.toml
+++ b/_data/datapackage_additions.toml
@@ -1,3 +1,8 @@
+[[licenses]]
+name  = "BSD-3-Clause"
+path  = "https://opensource.org/license/bsd-3-clause"
+title = "The 3-Clause BSD License"
+
 [[resources]] # Path: 7zip.png
 path        = "7zip.png"
 description = """Application icons from open-source software projects."""
