fix: correct typo, add link
Resolves (https://github.com/vega/vega-datasets/pull/643#discussion_r1884029008)

--- a/_data/datapackage_additions.toml
+++ b/_data/datapackage_additions.toml
@@ -534,7 +534,7 @@ path  = "https://data.london.gov.uk/dataset/statistical-gis-boundary-files-londo
 
 [[resources]] # Path: londonCentroids.json
 path        = "londonCentroids.json"
-description = """Calculated from `londongBoroughs.json` using `d3.geoCentroid`."""
+description = """Calculated from `londonBoroughs.json` using [`d3.geoCentroid`](https://d3js.org/d3-geo/math#geoCentroid)."""
 
 [[resources]] # Path: londonTubeLines.json
 path        = "londonTubeLines.json"
