--- a/_data/datapackage_additions.toml
+++ b/_data/datapackage_additions.toml
@@ -96,23 +96,23 @@ reads as follows:
 >
 >
 > The chart compares the in vitro sensitivities to neomycin of some of the common pathogens (gram+ in \
-> red and gram- in blue) with their sensitivities to penicillin, and streptomycin.
+red and gram- in blue) with their sensitivities to penicillin, and streptomycin.
 >
 > The effectiveness of the antibiotics is expressed as the highest dilution in μ/ml. which inhibits \
-> the test organism.
+the test organism.
 >
 > High dilutions are toward the periphery; consequently the length of the colored bar is proportional \
-> to the effectiveness.
+to the effectiveness.
 >
 > It is apparent that neomycin is especially effective against Staph. albus and aureus, Streph. \
-> fecalis, A. aerogenes, S. typhosa, E. coli, Ps. aeruginosa, Br. abortus, K. pneumoniae, Pr. \
-> vulgaris, S. schottmuelleri and M. tuberculosis.
+fecalis, A. aerogenes, S. typhosa, E. coli, Ps. aeruginosa, Br. abortus, K. pneumoniae, Pr. \
+vulgaris, S. schottmuelleri and M. tuberculosis.
 >
 > Unfortunately, some strains of proteus, pseudomonas and hemolytic streptococcus are resistant to \
-> neomycin, although the majority of these are sensitive to neomycin.
+neomycin, although the majority of these are sensitive to neomycin.
 >
 > It also inhibits actinomycetes, but is inactive against viruses and fungi. Its mode of action is \
-> not understood.
+not understood.
 """
 
 [[resources.sources]]
