fix: move triple quotes to own line
Seems to be parsed fine, but confused the language server in vscode

--- a/_data/datapackage_additions.toml
+++ b/_data/datapackage_additions.toml
@@ -936,7 +936,8 @@ a Scottish engineer who is often credited as the founder of statistical graphics
 published an elegant chart on the price of wheat. It plots 250 years of prices alongside 
 weekly wages and the reigning monarch. He intended to demonstrate that:
 > "never at any former period was wheat so cheap, in proportion to mechanical labour, \
-as it is at the present time.""""
+as it is at the present time."
+"""
 
 [[resources.sources]]
 title = "1822 Playfair Chart"
