--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,7 @@ jobs:
       - uses: astral-sh/setup-uv@v4
         with:
           version: ">=0.5.0"
+          enable-cache: true
 
       - name: Install Node dependencies
         run: npm ci
