--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,11 @@ jobs:
       - name: Format toml
         run: uvx taplo fmt
 
+      - name: Format and lint (python)
+        run: |
+          uvx ruff check
+          uvx ruff format --check
+
       - name: Install Node dependencies
         run: npm ci
 
