--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
           enable-cache: true
 
       - name: Format toml
-        run: uvx taplo fmt
+        run: uvx taplo fmt --check
 
       - name: Format and lint (python)
         run: |
