chore: Rename `weather.json` -> `weekly-weather.json`
https://github.com/vega/vega-datasets/issues/633

--- a/_data/datapackage_additions.toml
+++ b/_data/datapackage_additions.toml
@@ -932,8 +932,8 @@ from multiple fields in the original dataset. This data is intended for instruct
 title = "NOAA Climate Data Online"
 path  = "http://www.ncdc.noaa.gov/cdo-web/datatools/findstation"
 
-[[resources]] # Path: weather.json
-path        = "weather.json"
+[[resources]] # Path: weekly-weather.json
+path        = "weekly-weather.json"
 description = """Instructional dataset showing actual and predicted temperature data."""
 
 [[resources]] # Path: wheat.json
