--- a/_data/datapackage_additions.toml
+++ b/_data/datapackage_additions.toml
@@ -933,8 +933,12 @@ title = "NOAA Climate Data Online"
 path  = "http://www.ncdc.noaa.gov/cdo-web/datatools/findstation"
 
 [[resources]] # Path: weekly-weather.json
-path        = "weekly-weather.json"
-description = """Instructional dataset showing actual and predicted temperature data."""
+path = "weekly-weather.json"
+description = """Instructional dataset showing actual and predicted temperature data.
+
+> [!IMPORTANT]
+> Named `weather.json` in previous versions (`v1.4.0` - `v2.11.0`).
+"""
 
 [[resources]] # Path: wheat.json
 path = "wheat.json"
