--- a/_data/datapackage_additions.toml
+++ b/_data/datapackage_additions.toml
@@ -16,7 +16,15 @@ path  = "https://github.com/vega/vega-datasets/graphs/contributors"
 
 [[resources]] # Path: 7zip.png
 path        = "7zip.png"
-description = """Application icons from open-source software projects."""
+description = """Application icon from open-source software project. Used in [Image-based Scatter Plot example](https://vega.github.io/vega-lite/examples/scatter_image.html)."""
+
+[[resources.sources]]
+title   = "7-Zip"
+path    = "https://www.7-zip.org/"
+
+[[resources.licenses]]
+title = "GNU Lesser General Public License "
+path  = "https://www.7-zip.org/license.txt"
 
 [[resources]] # Path: airports.csv
 path = "airports.csv"
